--- a/public/edit.html
+++ b/public/edit.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link href="/public/css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" />
+
     <script src="/public/js/angular.js"></script>
     <script src="/public/js/jquery.min.js"></script>
     <script src="/public/js/bootstrap-tooltip.js"></script>
