--- a/public/login.html
+++ b/public/login.html
@@ -3,6 +3,11 @@
 <head>
     <title>登录</title>
     <link href="/public/css/bootstrap.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" />
+    <link rel="stylesheet" href="/public/css/ace.min.css" />
+    <link rel="stylesheet" href="/public/css/ace-responsive.min.css" />
+    <link rel="stylesheet" href="/public/css/ace-skins.min.css" />
+
     <script src="/public/js/angular.js"></script>
     <script type="text/javascript">
     function AuthController ($scope,$http,$location) {
@@ -26,12 +31,15 @@
     <div id="wrap">
         <div class="navbar">
             <div class="navbar-inner">
-                <div class="container">
+                <div class="container-fluid navbar-conntent">
                     <a class="brand" href="#">Conductor</a>
                 </div>
             </div>
         </div>
-        <div class="container">
+
+
+        <div class="container" style="margin-top:40px">
+
             <div ng-show="!valid" class="alert alert-error">
                用户名或密码错误!
             </div>
@@ -39,18 +47,18 @@
                 <div class="control-group">
                     <label class="control-label" for="username">用户名</label>
                     <div class="controls">
-                        <input type="text" ng-model="username"  placeholder="Username">
+                        <input style="border-radius:0px;" type="text" ng-model="username"  placeholder="Username">
                     </div>
                 </div>
                 <div class="control-group">
                     <label class="control-label" for="inputPassword">密码</label>
                     <div class="controls">
-                        <input type="password" ng-model="password" placeholder="Password">
+                        <input style="border-radius:0px" type="password" ng-model="password" placeholder="Password">
                     </div>
                 </div>
                 <div class="control-group">
                     <div class="controls">
-                        <button type="submit" class="btn" ng-click="login(username,password)">登录</button>
+                        <button type="submit" class="btn btn-primary btn-small" ng-click="login(username,password)">登录</button>
                     </div>
                 </div>
             </form>
