--- a/public/edit.html
+++ b/public/edit.html
@@ -15,6 +15,9 @@
         height:100%;
         width:100%;
     }
+    [class^="icon-"], [class*=" icon-"]{
+        background-image: url("/public/img/glyphicons-halflings.png");
+    }
     </style>
     
 </head>
