优化删除组按钮样式，修正bug，调整identifier，获取更精确

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,10 @@
     <script type="text/javascript" src="/public/js/jquery.min.js"></script>
     <script type="text/javascript" src="/public/js/bootstrap.min.js"></script>
     <style>
-    body {
+    .nav-list button.btn{
+        float: right;
+        position: relative;
+        top: 6px;
     }
     </style>
     <script type="text/javascript">
