--- a/public/index.html
+++ b/public/index.html
@@ -166,7 +166,7 @@
             </div>
             <div id="main-content" class="clearfix">
                 
-                <div class="row-fluid" id="page-content">
+                <div class="" id="page-content">
                     <div class="page-header position-relative">
                         <h1>
                             Configuration
