--- a/public/login.html
+++ b/public/login.html
@@ -40,24 +40,24 @@
         <div class="container" style="margin-top:40px">
 
             <div ng-show="!valid" class="alert alert-error">
-               用户名或密码错误!
+               invalid username or password!
             </div>
             <form class="form-horizontal">
                 <div class="control-group">
-                    <label class="control-label" for="username">用户名</label>
+                    <label class="control-label" for="username">Username:</label>
                     <div class="controls">
                         <input style="border-radius:0px;" type="text" ng-model="username"  placeholder="Username">
                     </div>
                 </div>
                 <div class="control-group">
-                    <label class="control-label" for="inputPassword">密码</label>
+                    <label class="control-label" for="inputPassword">Password:</label>
                     <div class="controls">
                         <input style="border-radius:0px" type="password" ng-model="password" placeholder="Password">
                     </div>
                 </div>
                 <div class="control-group">
                     <div class="controls">
-                        <button type="submit" class="btn btn-primary btn-small" ng-click="login(username,password)">登录</button>
+                        <button type="submit" class="btn btn-primary btn-info btn-small" ng-click="login(username,password)">Login</button>
                     </div>
                 </div>
             </form>
