--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <ul>
         <li><a href="new-mylist-detail.html" target="_blank">new-mylist-detail</a></li>
+        <li><a href="new-shop-search.html" target="_blank">new-mylist-detail</a></li>
     </ul>
 </body>
 </html>
