--- a/public/edit.html
+++ b/public/edit.html
@@ -126,7 +126,7 @@
                     </div>
 
 
-                    <div class="nav nav-list">
+                    <div class="nav nav-list" ng-cloak>
                         <div class="list-line">
                             <div class="title">
                                 <input type="text" value="{{pv}}" ng-model="pv" style="display:none" ng-show="editpv" ng-blur="editPvDone()" ng-enter="editPvDone()" placeholder="pv" id="pv"/>
@@ -259,7 +259,7 @@
             </form>
         </div>
       </div>
-    <script src="/public/js/sea.js" data-main="app"></script>
+    <script src="/public/js/sea.js" data-main="edit"></script>
 
 </body>
 </html>
