--- a/public/ctr.html
+++ b/public/ctr.html
@@ -135,7 +135,7 @@
                         
                         <div class="list-line" ng-repeat='rule in rules'>
                             <div class="title" ng-click="edit()">
-                                <i style="background-color:{{rule.color}}">{{rule.ctr}}</i>
+                                <i style="width:35px;background-color:{{rule.color}}">{{rule.ctr}}</i>
                                 <a href="javascript:;">{{rule.key}}</a>
                             </div>
                         </div>
